# forgebench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOGFOOD_LOG.md  LICENSE  README.md  SECURITY.md  SITE_SYNC_NOTES.md  V1_READINESS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
action/: Dockerfile  action.yml  entrypoint.sh
docs/: forgebench-yml-schema.md  llm-threat-model.md  report-schema.md
examples/: github-action-usage.yml
examples/sample_report/: README.md
forgebench/: __init__.py  __main__.py  calibration.py  check_runner.py  cli.py  diff_parser.py  feedback.py  github_pr.py  guardrails.py  init.py  llm_review.py  models.py  policy.py  posture.py  repair_prompt.py  report_writer.py  review.py  static_checks.py
forgebench/adversaries/: __init__.py  contract_keeper.py  models.py  product_guardrail_reviewer.py  runner.py  scope_auditor.py  test_skeptic.py
scripts/: dogfood_summary.py
tests/: test_calibration.py  test_check_runner.py  test_cli.py  test_diff_parser.py  test_dogfood_summary.py  test_feedback.py  test_finding_uid.py  test_github_action.py  test_github_pr.py  test_guardrails_yaml.py  test_init.py  test_install_docs.py  test_lens_runner.py  test_llm_review.py  test_policy.py  test_posture.py  test_regression_hunter.py  test_repair_prompt_hunks.py  test_report_schema.py  test_report_writer.py  test_sample_report.py  test_security_invariants.py  test_specialized_reviewers.py  test_static_checks.py  test_test_skeptic_v2.py  test_version.py
tests/fixtures/: checks_all_pass.yml  checks_build_fail.yml  checks_lint_fail.yml  checks_not_configured.yml  checks_timeout.yml  (+10 more)
(+186 files in other folders)
