[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgebench"
version = "0.7.0"
description = "Adversarial pre-merge QA for coding-agent output."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ForgeBench" }]
dependencies = [
    "pyyaml>=6.0",
]
license = { file = "LICENSE" }
keywords = [
    "ai-code-review",
    "cli",
    "code-review",
    "developer-tools",
    "quality-assurance",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://forgebench.dev"
Source = "https://github.com/caissonhq/forgebench"

[project.scripts]
forgebench = "forgebench.cli:main"

[tool.setuptools.packages.find]
include = ["forgebench*"]

[tool.setuptools.package-data]
"forgebench.adversaries.prompts" = ["*.md"]
